--- a/cs411projectJCY/Signin/templates/Signin/signin.html
+++ b/cs411projectJCY/Signin/templates/Signin/signin.html
@@ -13,6 +13,8 @@
         <p class="mt-2 mb-2 text-muted"> <a href = "{% url 'Signup:changepassword' %}" class="mt-2"> change your password</a></p>
         <p class="mt-2 mb-2 text-muted"> <a href = "{% url 'Signup:deactivate_account' %}" class="mt-2"> deactivate your account</a></p>
         <p class="mt-2 mb-3 text-muted"> <a href = "{% url 'Signup:forgetpassword' %}" class="mt-2"> forget your password?</a></p>
-      <p class="mt-3 mb-3 text-muted">&copy; 2019</p>
+      <br>
+        <a href = "{% url 'index' %}" > Return to Home</a>
+        <p class="mt-3 mb-3 text-muted">&copy; 2019</p>
 </form>
 {% endblock %}
