--- a/cs411projectJCY/Signup/templates/Signup/signup.html
+++ b/cs411projectJCY/Signup/templates/Signup/signup.html
@@ -102,6 +102,9 @@ input[type="interests"] {
         <input type="interests" class="form-control " placeholder="interests" name="interests">
   <button class="btn btn-lg btn-primary btn-block  mb-3" type="submit">Sign up</button>
       <a href = "{% url 'Signin:index' %}" > have an account? sign in</a>
+        <br>
+        <a href = "{% url 'index' %}" > Return to Home</a>
+
       <p class="mt-3 mb-3 text-muted">&copy; 2019</p>
 </form>
 </body>
