--- a/cs411projectJCY/homepage/templates/homepage/home.html
+++ b/cs411projectJCY/homepage/templates/homepage/home.html
@@ -8,10 +8,10 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
   <ul class="navbar-nav mr-auto">
     <li class="nav-item">
-      <a class="nav-link" href="#">Link 1</a>
+      <a class="nav-link" href="count">Number of Registrations</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Link 2</a>
+      <a class="nav-link" href="competitors">Number of Competitors</a>
     </li>
 
     <!-- Dropdown -->
