--- a/cs411projectJCY/homepage/templates/homepage/home.html
+++ b/cs411projectJCY/homepage/templates/homepage/home.html
@@ -41,10 +41,11 @@
 </nav>
 <br>
 
-<form>
-  <input type="text" name="search" placeholder="Search..">
-</form>
+<!--<form>-->
+<!--  <input type="text" name="search" placeholder="Search..">-->
+<!--</form>-->
 
-
-
+<div class = "centered">
+Please  <a href = "{% url 'Signin:index' %}" > sign in</a> to continue
+</div>
 {% endblock %}
