--- a/cs411projectJCY/homepage/templates/homepage/Header.html
+++ b/cs411projectJCY/homepage/templates/homepage/Header.html
@@ -6,29 +6,37 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+    <link href="https://getbootstrap.com/docs/4.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
   <style>
-    input[type=text] {
-      width: 500px;
-      box-sizing: border-box;
-      margin-top: 350px;
-      border: 2px solid #ccc;
-      border-radius: 4px;
-      font-size: 16px;
-      background-color: white;
-      padding: 12px 20px 12px 10px;
-      -webkit-transition: width 0.4s ease-in-out;
-      transition: width 0.4s ease-in-out;
-      position: fixed;
-      left: 50%;
-      margin-left: -250px;
-  }
+<!--    input[type=text] {-->
+<!--      width: 500px;-->
+<!--      box-sizing: border-box;-->
+<!--      margin-top: 350px;-->
+<!--      border: 2px solid #ccc;-->
+<!--      border-radius: 4px;-->
+<!--      font-size: 16px;-->
+<!--      background-color: white;-->
+<!--      padding: 12px 20px 12px 10px;-->
+<!--      -webkit-transition: width 0.4s ease-in-out;-->
+<!--      transition: width 0.4s ease-in-out;-->
+<!--      position: fixed;-->
+<!--      left: 50%;-->
+<!--      margin-left: -250px;-->
+<!--  }-->
 
-  input[type=text]:focus {
-  width: 500px;
-  }
+<!--  input[type=text]:focus {-->
+<!--  width: 500px;-->
+<!--  }-->
+.centered
+{
+font-size: 30px;
+position: fixed;
+margin-top: 350px;
+left:42%
+}
   </style>
 </head>
 <body class = "body" style = "background-color:#f6f6f6">
