--- a/cs411projectJCY/homepage/templates/homepage/count_competitors_result.html
+++ b/cs411projectJCY/homepage/templates/homepage/count_competitors_result.html
@@ -7,6 +7,6 @@
     Watch out! There are other {{num_student}} registered students who have the same skill as you!
 </h2>
  <br>
-    <a href="{% url 'index' %}">Return to Home</a>
+    <a href="{% url 'homepage:index' %}">Return to Home</a>
 
 {% endblock %}
