--- a/cs411projectJCY/homepage/templates/homepage/count_registration.html
+++ b/cs411projectJCY/homepage/templates/homepage/count_registration.html
@@ -5,7 +5,7 @@
     There are currently {{num_student}} students registered!
 </h2>
  <br>
-    <a href="{% url 'index' %}">Return</a>
+    <a href="{% url 'homepage:index' %}">Return</a>
 
     <br>
     <a href="{% url 'Signup:index' %}">Join Now!</a>
