--- a/cs411projectJCY/homepage/templates/homepage/count_competitors.html
+++ b/cs411projectJCY/homepage/templates/homepage/count_competitors.html
@@ -1,6 +1,6 @@
 {% extends "Signup/signuptemplate.html" %}
 {% block content %}
-    <form class="form-signin" action="{% url 'count_competitors' %}" method="post" name="count_competitors">
+    <form class="form-signin" action="{% url 'homepage:count_competitors' %}" method="post" name="count_competitors">
         {% csrf_token %}
   <h1>JCY</h1>
   <h1 class="h3 mb-3 font-weight-normal">Please enter the information</h1>
@@ -9,7 +9,7 @@
 
   <button class="btn btn-lg btn-primary btn-block mb-3" type="submit">Submit</button>
         <br>
-            <a href="{% url 'index' %}">Return to Home</a>
+            <a href="{% url 'homepage:index' %}">Return to Home</a>
 
       <p class="mt-3 mb-3 text-muted">&copy; 2019</p>
 </form>
