--- a/cs411projectJCY/homepage/templates/homepage/Header.html
+++ b/cs411projectJCY/homepage/templates/homepage/Header.html
@@ -33,9 +33,15 @@
 .centered
 {
 font-size: 30px;
-position: fixed;
+position: relative;
 margin-top: 350px;
-left:42%
+left:45%
+}
+
+.right
+{
+position:relative;
+left:45%;
 }
   </style>
 </head>
