finsihed job part

--- a/cs411projectJCY/myprofile/templates/myprofile/myprofile.html
+++ b/cs411projectJCY/myprofile/templates/myprofile/myprofile.html
@@ -2,7 +2,7 @@
 {% block content %}
 <nav class="navbar navbar-expand-sm bg-light navbar-light">
   <!-- Brand -->
-  <a class="navbar-brand" href="#">Logo</a>
+  <a class="navbar-brand" href=https://cs.illinois.edu/"><i class="fas fa-university"></i></a>
 
   <!-- Links -->
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
