--- a/cs411projectJCY/ResearchArea/templates/ResearchArea/areatable.html
+++ b/cs411projectJCY/ResearchArea/templates/ResearchArea/areatable.html
@@ -2,7 +2,7 @@
 {% block content %}
 <nav class="navbar navbar-expand-sm bg-light navbar-light">
   <!-- Brand -->
-  <a class="navbar-brand" href="#">Logo</a>
+  <a class="navbar-brand" href="https://cs.illinois.edu/"><i class="fas fa-university"></i></a>
 
   <!-- Links -->
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -76,5 +76,9 @@
 </div>
  <form action="{% url 'Signin:gotoprofile' %}" method="link">
   <button class="btn btn-info right" type="submit">go back to your profile</button>
+ </form>
+
+ <form action="{% url 'Signin:jobtable' %}" method="link">
+  <button class="btn btn-info right mt-3 " type="submit">See related Jobs</button>
  </form>
 {% endblock %}
