some modification on UI

--- a/cs411projectJCY/homepage/templates/homepage/Header.html
+++ b/cs411projectJCY/homepage/templates/homepage/Header.html
@@ -33,10 +33,13 @@
 .centered
 {
 font-size: 30px;
-position: relative;
-margin-top: 350px;
-left:45%;
+position: absolute;
+top:50%;
+left:50%;
+transform: translateX(-50%) translateY(-50%);
+text-align: center;
 }
+
 
 .right
 {
