--- a/cs411projectJCY/homepage/templates/homepage/home.html
+++ b/cs411projectJCY/homepage/templates/homepage/home.html
@@ -38,13 +38,17 @@
 </form>
 </div>
 </nav>
-<br>
+
 
 <!--<form>-->
 <!--  <input type="text" name="search" placeholder="Search..">-->
 <!--</form>-->
 
-<div class = "centered">
-Please  <a href = "{% url 'Signin:index' %}" > sign in</a> to continue
+<!--<div class = "centered">-->
+<!--Please  <a href = "{% url 'Signin:index' %}" > sign in</a> to continue-->
+<!--</div>-->
+<div class="centered">
+    Please  <a href = "{% url 'Signin:index' %}" > sign in</a> to continue
 </div>
+
 {% endblock %}
