keep modifying UI

--- a/cs411projectJCY/jobs/templates/jobs/jobtable.html
+++ b/cs411projectJCY/jobs/templates/jobs/jobtable.html
@@ -2,7 +2,7 @@
 {% block content %}
 <nav class="navbar navbar-expand-sm bg-light navbar-light">
   <!-- Brand -->
-  <a class="navbar-brand" href="#">Logo</a>
+  <a class="navbar-brand" href="https://cs.illinois.edu/"><i class="fas fa-university"></i></a>
 
   <!-- Links -->
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -10,9 +10,7 @@
     <li class="nav-item">
       <a class="nav-link" href="{% url 'homepage:count_regi' %}">Number of Registrations</a>
     </li>
-    <li class="nav-item">
-      <a class="nav-link" href="competitors">Number of Competitors</a>
-    </li>
+
       <li class="nav-item">
       <a class="nav-link" href="{% url 'myprofile:coursetable'%}">Add Course</a>
     </li>
